--- a/css/style.css
+++ b/css/style.css
@@ -1,91 +1,205 @@
+
 *{
     margin: 0;
     padding: 0;
+  
 }
-main{
-    display: flex;
-    flex-direction: column;
+body{
+    background-color: rgb(179, 190, 200);
+}
+.home{
+    height:100vh;
 }
 header{
     display: flex;
-    height: 10vh;
-}
-.media{
-    flex-basis: 50%;
-    background-color: yellow;
-}
-.nav{
-    background-color: rgb(255, 89, 0);
-    flex-basis: 50%;
-}
-.content{
-    display: flex;
     flex-basis: 100%;
 }
-.left{
-    display: flex;
-    flex-direction: column;
-    flex-basis: 25%;
-}
-.one{
-    background-color: pink;
-    height:20vh;
-}
-.two{
-    background-color: rgb(250, 101, 126);
-    height:20vh;
-}
-.three{
-    background-color: rgb(216, 50, 78);
-    height:20vh;
-}
-.four{
-    background-color: rgb(190, 7, 38);
-    height:20vh;
-}
-.center{
-    display: flex;
-    flex-direction: column;
-    flex-basis: 50%;
-}
-.top{
-    display: flex;
-    height: 40vh;
-}
-.top1{
-    background-color: rgb(133, 30, 129); 
-    flex-basis: 50%;
-}
-.top2{
-    background-color: rgb(201, 4, 195);
-    flex-basis: 50%;
-    
-}
-.bottom{
-    display: flex;
-    height: 40vh;
-}
-.bottom1{
-    background-color: rgb(252, 61, 61);
-    flex-basis:50% ;
-}
-.bottom2{
-    background-color: rgb(246, 28, 28);
-    flex-basis:50% ;
-}
-article{
-    display: flex;
-    flex-basis: 25%;
-}
-.article1{
-    background-color: rgb(47, 102, 243);
-flex-basis: 50%;
-}
-.article2{
-    background-color: rgb(39, 65, 230);
-flex-basis: 50%;
-}
-footer{
+.logo{
     height: 10vh;
-background-color: rgb(237, 58, 250);
+    background-color: pink;
+    flex-basis: 20%;
+    border-radius: 10px;
+    line-height:10vh ;
+    margin: 10px;
+}
+.menu{
+    height: 10vh;
+    background-color: palevioletred;
+    flex-basis:80%;
+    border-radius: 10px;
+    line-height:10vh ;
+    margin: 10px;
+}
+header h1{
+    text-align: center;
+    align-self: center;
+}
+.hero{
+    display: flex;
+    flex-basis: 100%;
+    height: 90vh;
+}
+.left1{
+ background-color: rgb(221, 132, 132);
+ flex-basis: 50%;
+ border-radius: 10px;
+ line-height:90vh ;
+ margin: 0px 10px 30px 10px;
+}
+.left2{
+    background-color: rgb(232, 100, 100);
+    flex-basis: 50%;
+    border-radius: 10px;
+    line-height:90vh ;
+    margin: 0px 10px 30px 10px;
+}
+.hero h1{
+    text-align: center;
+    align-self: center;
+}
+.fea-title{
+    background-color: rgb(231, 46, 108);
+    height: 10vh;
+    flex-basis: 100%; 
+    border-radius: 10px;
+    margin: 0px 10px 10px 10px;  
+    line-height: 10vh;
+}
+.fea-title h1{
+text-align: center;
+}
+.features{
+    display: flex; 
+    flex-basis: 100%; 
+    height: 88vh;
+}
+.f1{
+    line-height: 88vh;
+    flex-basis: 50%;
+    border-radius: 10px;
+    margin: 50px 50px 50px 50px;
+    background-color: rgb(241, 237, 113);
+}
+.f1 h2{
+    text-align: center;
+}
+.about{
+    display: flex;
+    flex-wrap:wrap ;
+    flex-basis: 100%;
+}
+.abt-title{
+    background-color: rgb(231, 46, 108);
+    height: 10vh;
+    flex-basis: 100%; 
+    border-radius: 10px;
+    margin: 0px 10px 10px 10px;  
+    line-height: 10vh;
+}
+.about h1{
+text-align: center;
+}
+.abt1{
+    line-height: 87vh;
+    background-color: rgb(239, 170, 249);
+    height: 87vh; 
+    flex-basis: 49%;
+    border-radius: 10px;
+    margin: 0px 10px 30px 10px;  
+}
+.abt2{
+    line-height: 87vh;
+    background-color: rgb(213, 98, 231);
+    height: 87vh; 
+    flex-basis: 49%;
+    border-radius: 10px;
+    margin: 0px 0px 30px 10px;  
+}
+
+.review{
+    display: flex;
+    flex-wrap:wrap ;
+    flex-basis: 100%;
+}
+.rev-title{
+    background-color: rgb(231, 46, 108);
+    height: 10vh;
+    flex-basis: 100%; 
+    border-radius: 10px;
+    margin: 0px 10px 10px 10px;  
+    line-height: 10vh;
+}
+.review h1{
+text-align: center;
+}
+.per{
+    line-height: 87vh;
+    background-color: rgb(170, 249, 173);
+    height: 79vh; 
+    flex-basis: 28%;
+    border-radius: 10px;
+    margin: 10px 50px 30px 50px;  
+}
+
+.pricing{
+    display: flex;
+    flex-wrap:wrap ;
+    flex-basis: 100%;
+}
+.pri-title{
+    background-color: rgb(231, 46, 108);
+    height: 10vh;
+    flex-basis: 100%; 
+    border-radius: 10px;
+    margin: 0px 10px 10px 10px;  
+    line-height: 10vh;
+}
+.pricing h1{
+text-align: center;
+}
+.pri{
+    line-height: 87vh;
+    background-color: rgb(255, 150, 131);
+    height: 79vh; 
+    flex-basis: 28%;
+    border-radius: 10px;
+    margin: 10px 50px 70px 50px;  
+}
+
+.contact{
+    display: flex;
+    flex-basis: 100%;
+    height: 90vh;
+    margin-top: 20px;
+}
+.cont-img{
+    line-height:100vh;
+    background-color: rgb(239, 170, 249);
+    height:97vh; 
+    flex-basis: 100%;
+    border-radius: 10px;
+    margin: 0px 10px 0px 10px;  
+}
+.form{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+}
+.cont-title{
+    background-color: rgb(231, 46, 108);
+    height: 10vh;
+    flex-basis: 100%; 
+    border-radius: 10px;
+    margin: 0px 20px 0px 10px;  
+    line-height: 10vh;
+}
+.contact h1{
+text-align: center;
+}
+.form-pattern{
+    line-height: 90vh;
+    background-color: rgb(213, 98, 231);
+    height: 87vh; 
+    border-radius: 10px;
+    margin: 0px 20px 0px 10px;  
 }
