--- a/css/style.css
+++ b/css/style.css
@@ -1,205 +1,247 @@
-
-*{
+* {
     margin: 0;
     padding: 0;
-  
+
 }
-body{
+
+body {
     background-color: rgb(179, 190, 200);
 }
-.home{
-    height:100vh;
+
+.home {
+    height: 100vh;
 }
-header{
+
+header {
     display: flex;
     flex-basis: 100%;
 }
-.logo{
+
+.logo {
     height: 10vh;
     background-color: pink;
     flex-basis: 20%;
     border-radius: 10px;
-    line-height:10vh ;
+    line-height: 10vh;
     margin: 10px;
 }
-.menu{
+
+.menu {
     height: 10vh;
     background-color: palevioletred;
-    flex-basis:80%;
+    flex-basis: 80%;
     border-radius: 10px;
-    line-height:10vh ;
+    line-height: 10vh;
     margin: 10px;
 }
-header h1{
+
+header h1 {
     text-align: center;
     align-self: center;
 }
-.hero{
+
+.hero {
     display: flex;
     flex-basis: 100%;
     height: 90vh;
 }
-.left1{
- background-color: rgb(221, 132, 132);
- flex-basis: 50%;
- border-radius: 10px;
- line-height:90vh ;
- margin: 0px 10px 30px 10px;
+
+.left1 {
+    background-color: rgb(221, 132, 132);
+    flex-basis: 50%;
+    border-radius: 10px;
+    line-height: 90vh;
+    margin: 0px 10px 30px 10px;
 }
-.left2{
+
+.left2 {
     background-color: rgb(232, 100, 100);
     flex-basis: 50%;
     border-radius: 10px;
-    line-height:90vh ;
+    line-height: 90vh;
     margin: 0px 10px 30px 10px;
 }
-.hero h1{
+
+.hero h1 {
     text-align: center;
     align-self: center;
 }
-.fea-title{
+
+.fea-title {
     background-color: rgb(231, 46, 108);
     height: 10vh;
-    flex-basis: 100%; 
+    flex-basis: 100%;
     border-radius: 10px;
-    margin: 0px 10px 10px 10px;  
+    margin: 0px 10px 10px 10px;
     line-height: 10vh;
 }
-.fea-title h1{
-text-align: center;
+
+.fea-title h1 {
+    text-align: center;
 }
-.features{
-    display: flex; 
-    flex-basis: 100%; 
+
+.features {
+    display: flex;
+    flex-basis: 100%;
     height: 88vh;
 }
-.f1{
+
+.f1 {
     line-height: 88vh;
     flex-basis: 50%;
     border-radius: 10px;
     margin: 50px 50px 50px 50px;
     background-color: rgb(241, 237, 113);
 }
-.f1 h2{
+
+.f1 h2 {
     text-align: center;
 }
-.about{
+
+.about {
     display: flex;
-    flex-wrap:wrap ;
+    flex-direction: column;
     flex-basis: 100%;
 }
-.abt-title{
+
+.abt {
+    display: flex;
+}
+
+.abt-title {
     background-color: rgb(231, 46, 108);
     height: 10vh;
-    flex-basis: 100%; 
+    flex-basis: 100%;
     border-radius: 10px;
-    margin: 0px 10px 10px 10px;  
+    margin: 0px 10px 10px 10px;
     line-height: 10vh;
 }
-.about h1{
-text-align: center;
+
+.about h1 {
+    text-align: center;
 }
-.abt1{
+
+.abt1 {
     line-height: 87vh;
     background-color: rgb(239, 170, 249);
-    height: 87vh; 
+    height: 87vh;
     flex-basis: 49%;
     border-radius: 10px;
-    margin: 0px 10px 30px 10px;  
+    margin: 0px 10px 30px 10px;
 }
-.abt2{
+
+.abt2 {
     line-height: 87vh;
     background-color: rgb(213, 98, 231);
-    height: 87vh; 
+    height: 87vh;
     flex-basis: 49%;
     border-radius: 10px;
-    margin: 0px 0px 30px 10px;  
+    margin: 0px 0px 30px 10px;
 }
 
-.review{
+.review {
     display: flex;
-    flex-wrap:wrap ;
+    flex-direction: column;
     flex-basis: 100%;
 }
-.rev-title{
+
+.pr-rev {
+    display: flex;
+}
+
+.rev-title {
     background-color: rgb(231, 46, 108);
     height: 10vh;
-    flex-basis: 100%; 
+    flex-basis: 100%;
     border-radius: 10px;
-    margin: 0px 10px 10px 10px;  
+    margin: 0px 10px 10px 10px;
     line-height: 10vh;
 }
-.review h1{
-text-align: center;
+
+.review h1 {
+    text-align: center;
 }
-.per{
+
+.per {
     line-height: 87vh;
     background-color: rgb(170, 249, 173);
-    height: 79vh; 
+    height: 79vh;
     flex-basis: 28%;
     border-radius: 10px;
-    margin: 10px 50px 30px 50px;  
+    margin: 10px 50px 30px 50px;
 }
 
-.pricing{
+.pricing {
     display: flex;
-    flex-wrap:wrap ;
+    flex-direction: column;
     flex-basis: 100%;
 }
-.pri-title{
-    background-color: rgb(231, 46, 108);
-    height: 10vh;
-    flex-basis: 100%; 
-    border-radius: 10px;
-    margin: 0px 10px 10px 10px;  
-    line-height: 10vh;
-}
-.pricing h1{
-text-align: center;
-}
-.pri{
-    line-height: 87vh;
-    background-color: rgb(255, 150, 131);
-    height: 79vh; 
-    flex-basis: 28%;
-    border-radius: 10px;
-    margin: 10px 50px 70px 50px;  
+
+.pri-cing {
+    display: flex;
 }
 
-.contact{
+.pri-title {
+    background-color: rgb(231, 46, 108);
+    height: 10vh;
+    flex-basis: 100%;
+    border-radius: 10px;
+    margin: 0px 10px 10px 10px;
+    line-height: 10vh;
+}
+
+.pricing h1 {
+    text-align: center;
+}
+
+.pri {
+    line-height: 87vh;
+    background-color: rgb(255, 150, 131);
+    height: 79vh;
+    flex-basis: 28%;
+    border-radius: 10px;
+    margin: 10px 50px 70px 50px;
+}
+
+.contact {
     display: flex;
     flex-basis: 100%;
     height: 90vh;
     margin-top: 20px;
 }
-.cont-img{
-    line-height:100vh;
+
+.cont-img {
+    line-height: 100vh;
     background-color: rgb(239, 170, 249);
-    height:97vh; 
+    height: 97vh;
     flex-basis: 100%;
     border-radius: 10px;
-    margin: 0px 10px 0px 10px;  
+    margin: 0px 10px 0px 10px;
 }
-.form{
+
+.form {
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
 }
-.cont-title{
+
+.cont-title {
     background-color: rgb(231, 46, 108);
     height: 10vh;
-    flex-basis: 100%; 
+    flex-basis: 100%;
     border-radius: 10px;
-    margin: 0px 20px 0px 10px;  
+    margin: 0px 20px 0px 10px;
     line-height: 10vh;
 }
-.contact h1{
-text-align: center;
+
+.contact h1 {
+    text-align: center;
 }
-.form-pattern{
+
+.form-pattern {
     line-height: 90vh;
     background-color: rgb(213, 98, 231);
-    height: 87vh; 
+    height: 87vh;
     border-radius: 10px;
-    margin: 0px 20px 0px 10px;  
+    margin: 0px 20px 0px 10px;
 }
