--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,13 @@
 * {
     margin: 0;
     padding: 0;
-
+    scroll-behavior: smooth;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-    background-color: rgb(179, 190, 200);
-}
+/* home section */
+#home {
 
-.home {
     height: 100vh;
 }
 
@@ -19,25 +18,52 @@ header {
 
 .logo {
     height: 10vh;
-    background-color: pink;
     flex-basis: 20%;
     border-radius: 10px;
     line-height: 10vh;
     margin: 10px;
 }
 
+.logo h1 {
+    font-size: 40px;
+    display: flex;
+    text-align: center;
+    align-self: center;
+    color: rgb(245, 27, 100);
+}
+
+.logo h1 b {
+    font-size: 30px;
+    color: rgb(44, 15, 59);
+}
+
 .menu {
     height: 10vh;
-    background-color: palevioletred;
     flex-basis: 80%;
     border-radius: 10px;
     line-height: 10vh;
     margin: 10px;
 }
 
-header h1 {
-    text-align: center;
-    align-self: center;
+.menu ul {
+    display: flex;
+    list-style: none;
+    justify-content: end;
+}
+
+.menu ul li {
+    margin: 0% 2% 0% 5%;
+}
+
+.menu ul li a {
+    text-decoration: none;
+    color: rgb(44, 15, 59);
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.menu ul li a:hover {
+    color: rgb(245, 27, 100);
 }
 
 .hero {
@@ -47,19 +73,78 @@ header h1 {
 }
 
 .left1 {
-    background-color: rgb(221, 132, 132);
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(221, 132, 132, 0);
     flex-basis: 50%;
     border-radius: 10px;
-    line-height: 90vh;
     margin: 0px 10px 30px 10px;
+    justify-content: center;
+}
+
+.left1 h1 {
+    align-self: center;
+    font-size: 40px;
+    margin: -100px 0px 30px 0px;
+    color: rgb(34, 14, 14);
+}
+
+.left1 h2 {
+    font-size: 40px;
+    margin-bottom: 20px;
+    align-self: center;
+    color: rgb(245, 27, 100);
+}
+
+.left1 p {
+    padding: 30px;
+    align-self: center;
+    color: rgb(16, 14, 14);
+}
+
+.left1 button {
+    width: 250px;
+    padding: 10px;
+    border-radius: 20px;
+    margin: 50px 0px 0px 50px;
+    background: linear-gradient(to right, rgba(68, 13, 58, 0.942), rgb(246, 6, 110));
+}
+
+.left1 button a {
+    color: white;
+    text-decoration: none;
 }
 
 .left2 {
-    background-color: rgb(232, 100, 100);
+    background-color: rgba(232, 100, 100, 0);
     flex-basis: 50%;
     border-radius: 10px;
-    line-height: 90vh;
     margin: 0px 10px 30px 10px;
+}
+
+.left2 img {
+    margin-left: 30%;
+    border-radius: 30px;
+    animation-name: moveimg;
+    animation-iteration-count: infinite;
+    animation-duration: 8s;
+    animation-delay: 0s;
+    position: relative;
+    animation-direction: alternate-reverse;
+}
+
+@keyframes moveimg {
+    0% {
+        transform: rotate(45deg);
+        left: 0px;
+        top: 0px;
+    }
+
+    100% {
+        transform: rotate(45deg);
+        left: 0px;
+        top: 270px;
+    }
 }
 
 .hero h1 {
@@ -67,6 +152,7 @@ header h1 {
     align-self: center;
 }
 
+/* features section */
 .fea-title {
     background-color: rgb(231, 46, 108);
     height: 10vh;
@@ -80,32 +166,48 @@ header h1 {
     text-align: center;
 }
 
-.features {
+#features {
     display: flex;
     flex-basis: 100%;
     height: 88vh;
 }
 
+#features img {
+    margin: 20px 50px 0px 50px;
+}
+
 .f1 {
-    line-height: 88vh;
-    flex-basis: 50%;
+    display: flex;
+    flex-direction: column;
+    height: 80vh;
+    border: 2px solid black;
     border-radius: 10px;
-    margin: 50px 50px 50px 50px;
-    background-color: rgb(241, 237, 113);
+    margin: 50px 10px 50px 10px;
+    box-shadow: 0px 10px 10px black;
 }
 
 .f1 h2 {
+    padding-top: 30px;
     text-align: center;
 }
 
-.about {
+.f1 p {
+    padding: 20px 90px 100px 90px;
+}
+
+.f1 button {
+    padding: 10px 50px 10px 50px;
+    align-self: center;
+    color: white;
+    border-radius: 20px;
+    background: linear-gradient(to right, rgba(68, 13, 58, 0.942), rgb(246, 6, 110));
+}
+
+/* about section */
+#about {
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
-}
-
-.abt {
-    display: flex;
 }
 
 .abt-title {
@@ -117,29 +219,88 @@ header h1 {
     line-height: 10vh;
 }
 
-.about h1 {
+.abt-title h1 {
     text-align: center;
 }
 
+.abt {
+    display: flex;
+}
+
+.abt1 img {
+    margin-left: 30%;
+    border-radius: 30px;
+    animation-name: moveimg;
+    animation-iteration-count: infinite;
+    animation-duration: 8s;
+    animation-delay: 0s;
+    position: relative;
+    animation-direction: alternate-reverse;
+}
+
+@keyframes moveimg {
+    0% {
+        transform: rotate(-45deg);
+        left: 0px;
+        top: 0px;
+    }
+
+    100% {
+        transform: rotate(-45deg);
+        left: 0px;
+        top: 270px;
+    }
+}
+
 .abt1 {
-    line-height: 87vh;
-    background-color: rgb(239, 170, 249);
     height: 87vh;
     flex-basis: 49%;
-    border-radius: 10px;
     margin: 0px 10px 30px 10px;
 }
 
 .abt2 {
-    line-height: 87vh;
-    background-color: rgb(213, 98, 231);
     height: 87vh;
     flex-basis: 49%;
     border-radius: 10px;
     margin: 0px 0px 30px 10px;
 }
 
-.review {
+.abt2 a {
+    text-decoration: none;
+}
+
+.abt2 h1 {
+    font-size: 40px;
+    align-items: flex-start;
+    padding: 150px 0px 50px 50px;
+}
+
+.abt2 p {
+    font-size: 20px;
+    align-items: flex-start;
+    padding-left: 50px;
+}
+
+.abt2 button {
+    cursor: pointer;
+    display: flex;
+    margin: 50px 50px 50px 50px;
+    text-align: center;
+    padding: 10px 40px 10px 40px;
+    align-self: center;
+    color: white;
+    border-radius: 20px;
+    background: linear-gradient(to right, rgba(68, 13, 58, 0.942), rgb(246, 6, 110));
+}
+
+.abt2 button b {
+    text-align: center;
+    font-size: 20px;
+    padding: 10px 50px 10px 50px;
+}
+
+/* review section */
+#review {
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
@@ -156,22 +317,49 @@ header h1 {
     border-radius: 10px;
     margin: 0px 10px 10px 10px;
     line-height: 10vh;
+    text-align: center;
 }
 
-.review h1 {
+#review h2 {
+    color: rgb(245, 27, 100);
     text-align: center;
 }
 
 .per {
-    line-height: 87vh;
-    background-color: rgb(170, 249, 173);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 0px 10px 10px black;
     height: 79vh;
     flex-basis: 28%;
     border-radius: 10px;
     margin: 10px 50px 30px 50px;
 }
 
-.pricing {
+.per-img {
+    align-self: center;
+    height: 200px;
+    width: 200px;
+    overflow: hidden;
+    background-color: blueviolet;
+    border-radius: 600px;
+}
+
+.rateing {
+    align-self: center;
+}
+
+.rateing input {
+    margin: 5px;
+}
+.per p {
+    padding: 50px;
+}
+
+/* pakage section */
+#pricing {
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
@@ -179,6 +367,7 @@ header h1 {
 
 .pri-cing {
     display: flex;
+    height: 85vh; 
 }
 
 .pri-title {
@@ -190,35 +379,58 @@ header h1 {
     line-height: 10vh;
 }
 
-.pricing h1 {
+#pricing h1 {
     text-align: center;
 }
 
 .pri {
-    line-height: 87vh;
-    background-color: rgb(255, 150, 131);
-    height: 79vh;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 0px 10px 10px black;
+    height: 60vh;
     flex-basis: 28%;
     border-radius: 10px;
-    margin: 10px 50px 70px 50px;
+    margin: 70px 50px 70px 50px;
+    justify-content: space-evenly;
 }
-
-.contact {
+.pri button {
+    align-self: center;
+    padding: 10px 50px 10px 50px;
+    color: white;
+    font-weight: bold;
+    border-radius: 20px;
+    background: linear-gradient(to right, rgba(68, 13, 58, 0.942), rgb(246, 6, 110));
+}
+.pri b{
+    color: rgb(231, 46, 108);
+    font-size: 30px;
+    text-align: center;
+}
+.details li{
+    font-size: 20px;   
+list-style: none;
+text-align: center;
+}
+.pri h1{
+    font-size: 40px;
+    color: rgb(77, 13, 86);
+}
+/* contact section */
+#contact {
     display: flex;
     flex-basis: 100%;
-    height: 90vh;
+    height: 100vh;
     margin-top: 20px;
 }
 
-.cont-img {
-    line-height: 100vh;
-    background-color: rgb(239, 170, 249);
-    height: 97vh;
-    flex-basis: 100%;
-    border-radius: 10px;
+.cont-img img {
+    display: flex;
+    justify-content: center;
+    height: 80vh;
     margin: 0px 10px 0px 10px;
 }
-
 .form {
     display: flex;
     flex-direction: column;
@@ -228,20 +440,48 @@ header h1 {
 .cont-title {
     background-color: rgb(231, 46, 108);
     height: 10vh;
-    flex-basis: 100%;
     border-radius: 10px;
     margin: 0px 20px 0px 10px;
     line-height: 10vh;
 }
 
-.contact h1 {
+#contact h1 {
     text-align: center;
 }
 
 .form-pattern {
-    line-height: 90vh;
-    background-color: rgb(213, 98, 231);
-    height: 87vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     border-radius: 10px;
     margin: 0px 20px 0px 10px;
+    flex-basis: 100%;
+}
+form{
+    flex-basis: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0px 50px 30px 50px;
+}
+input{
+    border: none;
+    border-bottom: 2px solid black;
+    padding: 20px 20px 20px 20px;
+}
+input ::placeholder{
+    color: black
+}
+label{
+    padding: 10px;
+    font-size: 15px;
+}
+form button{
+    margin-top: 50px;
+    padding: 10px 50px 10px 50px;
+    color: white;
+    font-weight: bold;
+    border-radius: 20px;
+   align-self: flex-start;
+    background: linear-gradient(to right, rgba(68, 13, 58, 0.942), rgb(246, 6, 110));
 }
