--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ header {
     100% {
         transform: rotate(45deg);
         left: 0px;
-        top: 270px;
+        top: 200px;
     }
 }
 
@@ -169,7 +169,7 @@ header {
 #features {
     display: flex;
     flex-basis: 100%;
-    height: 88vh;
+    height: 100vh;
 }
 
 #features img {
@@ -208,6 +208,8 @@ header {
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
+    height: 100vh;
+    margin-bottom: 50px;
 }
 
 .abt-title {
@@ -248,7 +250,7 @@ header {
     100% {
         transform: rotate(-45deg);
         left: 0px;
-        top: 270px;
+        top: 200px;
     }
 }
 
@@ -304,6 +306,8 @@ header {
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
+    height: 100vh;
+    margin-bottom: 50px;
 }
 
 .pr-rev {
