--- a/css/style.css
+++ b/css/style.css
@@ -180,11 +180,11 @@ header {
 .f1 {
     display: flex;
     flex-direction: column;
-    height: 90vh;
+    height: 80vh;
     border: 2px solid black;
     border-radius: 10px;
     margin: 50px 10px 50px 10px;
-    box-shadow: 0px 10px 10px black;
+    box-shadow: 10px 10px 10px black;
 }
 
 .f1 h2 {
@@ -193,7 +193,7 @@ header {
 }
 
 .f1 p {
-    padding: 20px 90px 100px 90px;
+    padding: 20px 90px 50px 90px;
 }
 
 .f1 button {
@@ -210,7 +210,7 @@ header {
     flex-direction: column;
     flex-basis: 100%;
     height: 100vh;
-    margin-bottom: 50px;
+   margin: 50px 0px 50px 0px;
 }
 
 .abt-title {
@@ -272,9 +272,10 @@ header {
 }
 
 .abt2 h1 {
+    color: rgb(245, 27, 100) ;
     font-size: 40px;
     align-items: flex-start;
-    padding: 150px 0px 50px 50px;
+    padding: 50px 0px 50px 50px;
 }
 
 .abt2 p {
@@ -298,7 +299,7 @@ header {
 .abt2 button b {
     text-align: center;
     font-size: 20px;
-    padding: 10px 50px 10px 50px;
+    padding: 10px 40px 10px 40px;
 }
 
 /* review section */
